# https://www.python.org/dev/peps/pep-0518/#file-format

[project]
name = "uv"
version = "0.1.0"
description = "Astronomer ap-vendor"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.1.0",
    "jinja2>=3.1.6",
    "pytest>=9.0.3",
    "pytest-testinfra>=10.2.2",
    "python-on-whales>=0.80.0",
    "pyyaml>=6.0.3",
    "semver>=3.0.4",
    "tomli>=2.4.0",
]

[tool.uv]
exclude-newer = "7 days"

# https://docs.astral.sh/ruff/settings/
[tool.ruff]
line-length = 132
target-version = "py311"

[tool.ruff.lint]
fixable = ["ALL"]

# https://docs.astral.sh/ruff/rules/
select = [
  "ASYNC",
  "ARG",
  "BLE",
  "C",
  "E",
  "F",
#  "FBT",
  "FLY",
  "FURB",
  "I",
  "N",
  "PERF",
  "PGH",
#  "PL",
  "Q",
  "R",
  "RUF",
  "S",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  "C901",
  "S602",
  "S607",
]

[tool.ruff.lint.per-file-ignores]
"**/test.py" = [
  "S101",
  ]

[tool.ruff.lint.mccabe]
max-complexity = 10
